--- a/index.html
+++ b/index.html
@@ -98,14 +98,18 @@
             </div>
             <hr>
             <!-- videos -->
-            <div>
-                <div>
+            <div class="videos">
+                <div class="video-card"> 
                     <!-- video card -->
-                     <img src="" alt="">
-                     <div>
-                        <p></p>
-                        <p></p>
-                        <div>
+                     <img class="thumbnail" width="250px" src="" alt="">
+                     <div class="video-info">
+                        <p class="video-title">
+
+                        </p>
+                        <p class="channel-title">
+                            
+                        </p>
+                        <div class="stats">
                             <p></p>
                             <p></p>
                         </div>
@@ -115,6 +119,17 @@
         </div>
 
     </div>
+
+    <a class="dropdown">
+        dropdownmenu
+    </a>
+    <div class="drop-menu">
+        <a href="">hello</a>
+        <a href="">hello</a>
+        <a href="">hello</a>
+        <a href="">hello</a>
+    </div>
+    <script src="app.js"></script>
 </body>
 
 </html>
