--- a/video.html
+++ b/video.html
@@ -14,9 +14,7 @@
 
         <div class="left-side">
             <!-- video -->
-            <video>
-                <source src="https://www.youtube.com/watch?v=-2_zFZgE5Lo&pp=ygULcG9yc2NoZSA5MTE%3D" type="video">
-            </video>
+            <iframe width="713" height="401" src="https://www.youtube.com/embed/xUOhJux8iEc" title="Audi RS7 2020 review – tested 0-60mph and on the Autobahn!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="video-info">
                 <!-- video info -->
                 <h3></h3>
